manifest/foobar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foobar
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: foobar
  template:
    metadata:
      labels:
        app: foobar
    spec:
      containers:
      - image: 'kicbase/echo-server:1.0'
        name: foobar
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 200m
        affinity:
          nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              nodeSelectorTerms:
              - matchExpressions:
                - key: topology.kubernetes.io/zone
                  operator: In
                  values:
                  - eastus
